[package]
name = "s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.0", features = ["behavior-version-latest"] }
aws-smithy-runtime = { version = "1.0", features = ["client", "connector-hyper-0-14-x"] }
aws-smithy-types = "1.1"
aws-types = "1.0"
futures-util = { version = "0.3.16", default-features = false, features = ["alloc"] }
hdrhistogram = "7.5.2"
hyper-rustls = { version = "0.23", features = ["http2"] }
tokio = { version = "1.17", features = ["macros", "test-util", "rt-multi-thread"] }
tokio-util = "0.7"
hyper = { version="0.14", features = ["stream"] }

[profile.release]
debug = 1
